# TransAct

./: README.md  example.py  main.py  pyproject.toml
src/model_cursor/: __init__.py  data.py  evaluation.py  training.py  transact.py
